--- a/templates/default/contact/contact.twig
+++ b/templates/default/contact/contact.twig
@@ -69,9 +69,9 @@
               <li><a href="{{block.socialLink}}" target="_blank"><svg class="icon icon-vimeo"><use xlink:href="/assets/icons/symbol-defs.svg#icon-vimeo"></use></svg></a></li>
           {% endswitch %}
           {% endfor %}
-         <li><a href="/terms">Terms</a></li>
-         <li><a href="/privacy-policy">Privacy</a></li>
-         <li><a href="https://www.garethjohnsdesign.com" class="dark-gray">Site by Reformation</a></li>
+         <li><a href="/terms" class="small">Terms</a></li>
+         <li><a href="/privacy-policy" class="small">Privacy</a></li>
+         <li><a href="https://www.garethjohnsdesign.com" class="small">Site Credit</a></li>
         </ul>
       </div>
     </div>
