--- a/web/assets/scss/_settings.scss
+++ b/web/assets/scss/_settings.scss
@@ -108,7 +108,7 @@ $global-weight-normal: normal;
 $global-weight-bold: bold;
 $global-radius: 0;
 $global-menu-padding: 0.7rem 1rem;
-$global-menu-padding: 0.4rem 0rem;
+$global-menu-padding: 0rem 0rem 0.7rem 0rem;
 $global-menu-nested-margin: 1rem;
 $global-text-direction: ltr;
 $global-flexbox: true;
