--- a/templates/default/projects/project.twig
+++ b/templates/default/projects/project.twig
@@ -68,10 +68,10 @@
 
 <div class="grid-x grid-padding-x grid-padding-y grid-margin-y align-center">
   <div class="small-12 cell text-center">
-  {% if entry.director|length %}<div><span class="dark-gray">Director</span> {{ entry.director }}</div>{% endif %}
-  {% if entry.producer|length %}<div><span class="dark-gray">Producer</span> {{ entry.producer }}</div>{% endif %}
-  {% if entry.productionCompany|length %}<div><span class="dark-gray">Production Company</span> {{ entry.productionCompany }}</div>{% endif %}
-  {% if entry.agency|length %}<div><span class="dark-gray">Agency</span> {{ entry.agency }}</div>{% endif %}
+  {% if entry.director|length %}<div><span class="dark-gray padding-right">Director</span> {{ entry.director }}</div>{% endif %}
+  {% if entry.producer|length %}<div><span class="dark-gray padding-right">Producer</span> {{ entry.producer }}</div>{% endif %}
+  {% if entry.productionCompany|length %}<div><span class="dark-gray padding-right">Production Company</span> {{ entry.productionCompany }}</div>{% endif %}
+  {% if entry.agency|length %}<div><span class="dark-gray padding-right">Agency</span> {{ entry.agency }}</div>{% endif %}
   </div>
 </div>
 
