Fix aspect ratio issue

--- a/web/assets/scss/_layout.scss
+++ b/web/assets/scss/_layout.scss
@@ -343,6 +343,15 @@ p a {
   background-repeat: no-repeat;
 }
 
+.image--hero {
+  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
+  min-height: 100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
+  background-size: cover; 
+  background-position: 50%;
+}
+
 
 // 6. Navigation
 // -------------
@@ -591,4 +600,32 @@ padding-right: 0.5rem !important;
 
 button {
   cursor: pointer;
+}
+
+
+.hero {
+position: relative;
+overflow: hidden;
+}
+
+.video {
+  min-width: 100%; 
+  min-height: 100%;
+//   max-width: 100%;
+  width: auto;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+.home .navigation {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 210;
+  background-color: transparent;
+  @include links ($white, $white);
 }
