Fix aspect ratio issue

--- a/templates/default/_includes/global/navigation.twig
+++ b/templates/default/_includes/global/navigation.twig
@@ -2,7 +2,7 @@
 <div class="grid-x align-justify navigation" id="swup-header">
 
   <div class="small-10 cell">
-    <a class="white text-uppercase show-for-small-only" aria-label="Navigation" data-toggle="overlayNavigation">
+    <button class="white text-uppercase show-for-small-only" aria-label="Navigation" data-toggle="overlayNavigation">
     {% if bodyClass == "project" %}
     {{ entry.title }} <div class="dark-gray">{{ entry.client }}</div>
     {% elseif bodyClass == "category" %}
@@ -11,8 +11,8 @@
     {{ siteName }} <div class="dark-gray">{{ entry.title }}</div>
     {% else %}
     {{ siteName }} <div class="dark-gray">Cinematographer</div>{% endif %}
-    </a>
-    <a class="white text-uppercase show-for-medium" aria-label="Navigation" data-toggle="overlayNavigation">
+    </button>
+    <button class="white text-uppercase show-for-medium" aria-label="Navigation" data-toggle="overlayNavigation">
     {% if bodyClass == "project" %}
     {{ entry.title }} <span class="dark-gray padding-left">{{ entry.client }}</span>
     {% elseif bodyClass == "category" %}
@@ -21,12 +21,11 @@
     {{ siteName }} <span class="dark-gray padding-left">{{ entry.title }}</span>
     {% else %}
     {{ siteName }} <span class="dark-gray padding-left">Cinematographer</span>{% endif %}
-    </a>
+    </button>
   </div>
 
   <div class="shrink cell">
-{#     <button class="white" aria-label="Navigation" data-toggle="overlayNavigation"><svg class="icon icon-lens"><use xlink:href="/assets/icons/symbol-defs.svg#icon-lens"></use></svg></button> #}
-    <a class="white text-uppercase" aria-label="Navigation" data-toggle="overlayNavigation">Menu</button>
+    <button class="white text-uppercase" aria-label="Navigation" data-toggle="overlayNavigation">Menu</button>
   </div>
 
 </div>
