--- a/templates/default/index.twig
+++ b/templates/default/index.twig
@@ -27,7 +27,7 @@
 
 <div class="image--hero" data-aos="new-animation"></div>
 {% if entry.previewVideo %}
-  <video playsinline autoplay muted loop class="video" poster="" data-aos="new-animation">
+  <video autoplay loop muted playsinline class="video" poster="">
     <source src="{{ entry.previewVideo }}" type="video/mp4">
   </video>
 {% endif %}
