Testing data-src

--- a/templates/default/index.twig
+++ b/templates/default/index.twig
@@ -28,7 +28,7 @@
 <div class="image--hero" data-aos="new-animation"></div>
 {% if entry.previewVideo %}
   <video autoplay loop muted playsinline class="video" poster="">
-    <source src="{{ entry.previewVideo }}" type="video/mp4">
+    <source data-src="{{ entry.previewVideo }}" type="video/mp4">
   </video>
 {% endif %}
 </div>
